--- a/Register.css
+++ b/Register.css
@@ -7,7 +7,7 @@
 
 .navbar {
   background-color: #fff;
-  color: blue;
+  color: rgba(11, 9, 9, 0.674);
   padding: 1em;
   display: flex;
   justify-content: space-between;
@@ -32,7 +32,7 @@
 }
 
 .blue-bg {
-    background-color: blue;
+    background-color: rgba(255, 0, 0, 0.644);
     padding: 20px; /* Add padding as needed */
     color: white; /* Set text color */
 }
@@ -83,7 +83,7 @@ nav ul li:first-child {
   button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #3c00ff98;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -125,7 +125,7 @@ nav ul li:first-child {
   button {
     width: 200px; /* Set a fixed width for the button */
     padding: 10px;
-    background-color: #007bff;
+    background-color: #3300ffa4;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -170,7 +170,7 @@ nav ul li:first-child {
   button {
     width: 200px;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #3700ffa5;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -182,25 +182,27 @@ nav ul li:first-child {
     background-color: #0056b3;
   }
   footer {
-    background-color: #f9f4f4;
-    color: #2509f4;
+    background-color: #d6d4d4;
+    color: #050408;
     text-align: center;
     padding: 10px 0;
 }
 
 .info {
-        display: flex;
-        background: #3903fb;
-        color: rgb(244, 244, 249);
+  display: flex;
+margin-top: 100px;
+  background: #fb03039e;
+  color: rgb(244, 244, 249);
 }
-    
+.info1{
+  margin-left: 180px;
+}
 
-.info ul li{
-    margin-top: 50px;
-   margin-right: 100px;
+.info ul{
+  margin-top: 30px;
 }
-.info p{
-    margin-top: 50px;
-    margin-right: 50px;
+.info ul li{
+  margin-top: 30px;
+ 
 }
 
