--- a/About.css
+++ b/About.css
@@ -7,7 +7,7 @@ body {
   }
   .navbar {
     background-color: #fff;
-    color: rgba(255, 0, 0, 0.384);
+    color: rgba(12, 12, 13);
     padding: 1em;
     display: flex;
     justify-content: space-between;
@@ -31,7 +31,7 @@ body {
     text-decoration: underline;
   }
   .header {
-    background-color: #1b0404;
+    background-color:rgba(255, 0, 0, 0.641) ;
     color: white;
     text-align: left;
     padding: 1em;
@@ -56,7 +56,7 @@ body {
   .info {
     display: flex;
   margin-top: 100px;
-    background: #3903fb;
+    background: rgba(255, 0, 0, 0.641) ;
     color: rgb(244, 244, 249);
   }
   .info1{
@@ -73,7 +73,7 @@ body {
   
   .footer {
     background-color: #fff;
-    color: blue;
+    color:rgba(12, 12, 13) ;
     text-align: center;
     padding: 1em;
     position: relative;
