--- a/Addtype.css
+++ b/Addtype.css
@@ -3,7 +3,7 @@ body {
   } 
   .navbar {
     background-color: #fff;
-    color: blue;
+    color:rgba(12, 12, 12,) ;
     padding: 1em;
     display: flex;
     justify-content: space-between;
@@ -23,7 +23,7 @@ body {
     text-decoration: underline;
   }
   .header {
-    background-color: #007BFF;
+    background-color: #ff0011b1;
     color: white;
     text-align: left;
     padding: 1em;
@@ -39,7 +39,7 @@ body {
     align-items: center;
     border: 1px solid #ccc;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(163, 4, 4, 0.684);
     width: 300px;
     padding: 20px;
     margin-left:40%;
@@ -47,7 +47,7 @@ body {
   }
   
   .form-header {
-    background-color: blue;
+    background-color: rgba(28, 4, 90, 0.715);
     color: white;
     padding: 10px;
     text-align: center;
@@ -93,7 +93,7 @@ body {
   .info {
     display: flex;
   margin-top: 100px;
-    background: #3903fb;
+    background: #fb03039e;
     color: rgb(244, 244, 249);
   }
   .info1{
@@ -110,7 +110,7 @@ body {
   
   .footer {
     background-color: #fff;
-    color: blue;
+    color: rgb(12, 12, 13);
     text-align: center;
     padding: 1em;
     position: relative;
