--- a/Dashboard.css
+++ b/Dashboard.css
@@ -3,7 +3,7 @@ body {
   }
   .navbar {
     background-color: #fff;
-    color: blue;
+    color: rgb(12, 12, 13);
     padding: 1em;
     display: flex;
     justify-content: space-between;
@@ -23,7 +23,7 @@ body {
     text-decoration: underline;
   }
   .header {
-    background-color: #007BFF;
+    background-color: #ff000095;
     color: white;
     text-align: left;
     padding: 1em;
@@ -70,7 +70,7 @@ body {
   .info {
     display: flex;
   margin-top: 100px;
-    background: #3903fb;
+    background: #ff000095;
     color: rgb(244, 244, 249);
   }
   .info1{
@@ -87,7 +87,7 @@ body {
   
   .footer {
     background-color: #fff;
-    color: blue;
+    color: rgb(12, 12, 13);
     text-align: center;
     padding: 1em;
     position: relative;
