--- a/Login.css
+++ b/Login.css
@@ -7,7 +7,7 @@ body {
 }
 .navbar {
     background-color: #fff;
-    color: blue;
+    color: rgb(8, 8, 12);
     padding: 1em;
     display: flex;
     justify-content: space-between;
@@ -22,7 +22,7 @@ body {
     text-decoration: underline;
 }
 .header {
-    background-color: #007BFF;
+    background-color: #ff000095;
     color: white;
     text-align: center;
     padding: 1em;
@@ -41,7 +41,7 @@ body {
     background-color: #f2f2f2;
     padding: 2em;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(220, 33, 33, 0.1);
 }
 .login-form input {
     width: 100%;
@@ -53,7 +53,7 @@ body {
 .login-form button {
     width: 100%;
     padding: 1em;
-    background-color: blue;
+    background-color: #140990a7;
     color: white;
     border: none;
     border-radius: 5px;
@@ -65,25 +65,24 @@ body {
 
 .info {
     display: flex;
-  margin-top: 50px;
-    background: #3903fb;
+  margin-top: 100px;
+    background: #fb03039e;
     color: rgb(244, 244, 249);
-}
-.info ul{
-    margin-left: 20px;
-}
-.info ul li{
-    margin-top: 50px;
-   margin-right: 100px;
-}
-.info p{
-    margin-top: 50px;
-    margin-right: 50px;
-}
-
+  }
+  .info1{
+    margin-left: 180px;
+  }
+  
+  .info ul{
+    margin-top: 30px;
+  }
+  .info ul li{
+    margin-top: 30px;
+   
+  }
 .footer {
     background-color: #fff;
-    color: blue;
+    color: rgb(12, 12, 13);
     text-align: center;
     padding: 1em;
     position: fixed;
