--- a/Product.css
+++ b/Product.css
@@ -3,7 +3,7 @@ body {
   }
   .navbar {
     background-color: #fff;
-    color: blue;
+    color: rgb(12, 12, 13);
     padding: 1em;
     display: flex;
     justify-content: space-between;
@@ -23,7 +23,7 @@ body {
     text-decoration: underline;
   }
   .header {
-    background-color: #007BFF;
+    background-color: #ff000095;
     color: white;
     text-align: left;
     padding: 1em;
@@ -46,7 +46,12 @@ body {
     height:200px;
     padding: 10px;
     text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(237, 37, 37, 0.1);
+  }
+  .product-box:hover{
+    width: 220px;
+    height:220px;
+    box-shadow: 0 0 20px rgba(227, 6, 6, 0.986);
   }
   .product-box img {
     max-width: 100%;
@@ -60,7 +65,7 @@ body {
     color: #333;
   }
   .buy-button {
-    background-color: #4508ea;
+    background-color: #2d0990a7;
     color: white;
     padding: 10px;
     border: none;
@@ -74,7 +79,7 @@ body {
   .info {
     display: flex;
   margin-top: 100px;
-    background: #3903fb;
+    background: #ff000095;
     color: rgb(244, 244, 249);
   }
   .info1{
@@ -91,7 +96,7 @@ body {
   
   .footer {
     background-color: #fff;
-    color: blue;
+    color: rgb(12, 12, 13);
     text-align: center;
     padding: 1em;
     position: relative;
